# haBit

./: .gitignore  Cargo.toml  Makefile  Readme.md  docker-compose.yml  docker-helper.sh
contract/: Cargo.toml  README.md
contract/spells/: mint-nft.yaml  mint-token.yaml
contract/src/: lib.rs  main.rs
contracts/: habit-tracker.vk
docker/bitcoin/: Dockerfile  entrypoint.sh  init.sh
docker/mempool/: backend-config.json
src/: main.rs  nft.rs  tests.rs
