[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
bitcoincore-rpc = "0.19"

anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Added a small change to charms repo so to have testnet support in automated tests.
charms-client = { git = "ssh://git@github.com/WalquerX/charms.git", branch = "add-regtest-support" }
dirs = "5.0"
tempfile = "3.8"

[dev-dependencies]
corepc-node = { version = "0.10.1", features = ["download", "22_1"] }
serial_test = "2"

[[bin]]
name = "habit-tracker"
path = "src/main.rs"