[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "test-util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
bitcoincore-rpc = "0.19"

anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
charms-client = "0.10.2"
dirs = "5.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
corepc-node = { version = "0.10.1", features = ["download", "27_0"] }
serial_test = "3"

[[bin]]
name = "habit-tracker"
path = "src/main.rs"